# lyrics_analysis

./: .gitignore  README.md  lyrics_service.py  main.py  pyproject.toml  requirements.txt  spotify_service.py
SpotifyService/: schemas.py  spotify_service.py  test_data.py  test_spotify_service.py
